move from package rentasad.rentasad.library to rentasad.library Switch to openJDK 11 LTS