@@ -22,10 +22,7 @@
 				<version>3.8.1</version>
 				<configuration>
 					<!-- <source>1.8</source> -->
-					<release>15</release>
-					<compilerArgs>
-						--enable-preview
-					</compilerArgs>
+					<release>11</release>
 				</configuration>
 			</plugin>
 		</plugins>
